src/test/ui/issues/issue-57843.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57843.rs:23:9
   |
LL |     Foo(Box::new(|_| ()));
   |         ^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `FnOnce<(&'a bool,)>`
              found type `FnOnce<(&bool,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-57843.rs:23:18
   |
LL |     Foo(Box::new(|_| ()));
   |                  ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
